[package]
name = "dcurse-growth"
version = "0.1.0"
authors = ["Victor Deleau <victor.deleau@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
ndarray = { version = "0.13.0" }
ndarray-linalg = { version = "0.12", features = ["openblas"] }
csv = "1.1.3"
